app/assets/stylesheets/application.css
/*
 * This is a manifest file that'll be compiled into application.css, which will include all the files
 * listed below.
 *
 * Any CSS and SCSS file within this directory, lib/assets/stylesheets, vendor/assets/stylesheets,
 * or vendor/assets/stylesheets of plugins, if any, can be referenced here using a relative path.
 *
 * You're free to add application-wide styles to this file and they'll appear at the bottom of the
 * compiled file so the styles you add here take precedence over styles defined in any styles
 * defined in the other CSS/SCSS files in this directory. It is generally better to create a new
 * file per style scope.
 *
 *= require_tree .
 *= require_self
 *= require font-awesome
 *= require variables
 */

body > .container {
  padding-top: 60px;
  padding-bottom: 60px;
}

.about h3 {
  margin-top: 2em;
}

th.played, td.played {
  background-color: #ececec;
}

th.happened, td.happened {
  background-color: #b4b4b4;
}

.week {
  font-size: 1.8em;
  font-weight: bold;
}

.btn-social:hover {
  color: white;
}

.bet {
  height: 5.5em;
}

.round {
  padding-top: 0.5em;
  font-size: 1.5em;
}

.teams img {
  width: 50px;
  height: 50px;
}

.team-name {
  padding-top: 0.5em;
  font-size: 1.6em;
}

.goal, .points {
  font-size: 2.5em;
}

.save-bet {
  cursor: pointer;
}

.vs {
  padding-top: 0.5em;
  font-size: 1.5em;
}

.bet input {
  text-align: center;
  width: 1.5em;
  border: 1px solid white;
  background-color: white;
}

.bettable {
  cursor: pointer;
}

.bettable:hover input {
  border: 1px solid #ccc;
}

.editing input {
  border: 1px solid gray !important;
}

.ranking li {
  margin-left: 30px;
  display: list-item;
}

